@@ -16,19 +16,18 @@ import Control.Arrow
 
 data Out
     = Char Char
-    | Tag          -- <
-    | TagShut      -- </
+    | Tag             -- <
+    | TagShut         -- </
     | AttName
     | AttVal
-    | TagEnd       -- >
-    | TagEndClose  -- />
-    | Comment      -- <!--
-    | CommentEnd   -- -->
-    | Entity       -- &
-    | EntityNum    -- &#
-    | EntityHex    -- &#x
-    | EntityEnd    -- ;
-    | EntityEndAtt -- missing the ; and in an attribute
+    | TagEnd          -- >
+    | TagEndClose     -- />
+    | Comment         -- <!--
+    | CommentEnd      -- -->
+    | Entity          -- &
+    | EntityNum       -- &#
+    | EntityHex       -- &#x
+    | EntityEnd Bool  -- Attributed followed by ; for True, missing ; for False
     | Warn String
     | Pos Position
       deriving (Show,Eq)
@@ -98,7 +97,7 @@ output ParseOptions{..} x = (if optTagTextMerge then tagTextMerge else id) $ go 
                   (z,b) = atts y
         go x | isComment x = pos x $ TagComment a : go (skip isCommentEnd y)
             where (y,a) = charsStr $ next x
-        go x | isEntity x = poss x ((if optTagWarning then id else filter (not . isTagWarning)) $ optEntityData a) ++ go (skip isEntityEnd y) 
+        go x | isEntity x = poss x ((if optTagWarning then id else filter (not . isTagWarning)) $ optEntityData (a, getEntityEnd y)) ++ go (skip isEntityEnd y) 
             where (y,a) = charsStr $ next x
         go x | isEntityChr x = pos x $ TagText (fromChar $ entityChr x a) : go (skip isEntityEnd y)
             where (y,a) = chars $ next x
@@ -124,12 +123,12 @@ output ParseOptions{..} x = (if optTagTextMerge then tagTextMerge else id) $ go 
             where (y,b) = charss t (next x)
         charss t x | t, isEntity x = second (toString n ++) $ charss t $ addWarns m z
             where (y,a) = charsStr $ next x
-                  b = not $ isEntityEndAtt y
-                  z = if b then skip isEntityEnd y else next y
+                  b = getEntityEnd y
+                  z = skip isEntityEnd y
                   (n,m) = optEntityAttrib (a,b)
         charss t x | t, isEntityChr x = second (entityChr x a:) $ charss t z
             where (y,a) = chars $ next x
-                  z = if isEntityEnd y then next y else skip isEntityEndAtt y
+                  z = skip isEntityEnd y
         charss t ((_,w),Pos p:xs) = charss t ((p,w),xs)
         charss t x | Just a <- fromWarn x = charss t $ (if optTagWarning then addWarns [TagWarning $ fromString a] else id) $ next x
         charss t x = (x, [])
@@ -162,11 +161,12 @@ isEntityChr (_,EntityNum{}:_) = True; isEntityChr (_,EntityHex{}:_) = True; isEn
 isEntityNum (_,EntityNum{}:_) = True; isEntityNum _ = False
 isEntityHex (_,EntityHex{}:_) = True; isEntityHex _ = False
 isEntityEnd (_,EntityEnd{}:_) = True; isEntityEnd _ = False
-isEntityEndAtt (_,EntityEndAtt{}:_) = True; isEntityEndAtt _ = False
 isWarn (_,Warn{}:_) = True; isWarn _ = False
 
 fromChr (_,Char x:_) = Just x ; fromChr _ = Nothing
 fromWarn (_,Warn x:_) = Just x ; fromWarn _ = Nothing
+
+getEntityEnd (_,EntityEnd b:_) = b
 
 
 -- Merge all adjacent TagText bits
