@@ -12,7 +12,7 @@ import Text.StringLike
 data ParseOptions str = ParseOptions
     {optTagPosition :: Bool -- ^ Should 'TagPosition' values be given before some items (default=False,fast=False)
     ,optTagWarning :: Bool  -- ^ Should 'TagWarning' values be given (default=False,fast=False)
-    ,optEntityData :: str -> [Tag str] -- ^ How to lookup an entity
+    ,optEntityData :: (str,Bool) -> [Tag str] -- ^ How to lookup an entity (Bool = has ending @';'@)
     ,optEntityAttrib :: (str,Bool) -> (str,[Tag str]) -- ^ How to lookup an entity in an attribute (Bool = has ending @';'@?)
     ,optTagTextMerge :: Bool -- ^ Require no adjacent 'TagText' values (default=True,fast=False)
     }
@@ -23,13 +23,10 @@ data ParseOptions str = ParseOptions
 parseOptions :: StringLike str => ParseOptions str
 parseOptions = ParseOptions False False entityData entityAttrib True
     where
-        entityData x = case lookupEntity y of
-            Just y -> [TagText $ fromChar y]
-            Nothing -> [TagText $ fromString $ "&" ++ y ++ ";"
-                       ,TagWarning $ fromString $ "Unknown entity: " ++ y]
-            where y = toString x
+        entityData x = TagText a : b
+            where (a,b) = entityAttrib x
 
-        entityAttrib (x,b) = case lookupEntity y of
+        entityAttrib ~(x,b) = case lookupEntity y of
             Just y -> (fromChar y, [])
             Nothing -> (fromString $ "&" ++ y ++ [';'|b], [TagWarning $ fromString $ "Unknown entity: " ++ y])
             where y = toString x
@@ -44,7 +41,7 @@ parseOptionsFast = parseOptions{optTagTextMerge=False}
 fmapParseOptions :: (StringLike from, StringLike to) => ParseOptions from -> ParseOptions to
 fmapParseOptions (ParseOptions a b c d e) = ParseOptions a b c2 d2 e
     where
-        c2 x = map (fmap castString) $ c $ castString x
-        d2 (x,y) = (castString r, map (fmap castString) s)
+        c2 ~(x,y) = map (fmap castString) $ c (castString x, y)
+        d2 ~(x,y) = (castString r, map (fmap castString) s)
             where (r,s) = d (castString x, y)
 
